<resources>

    <!-- App Content -->
    <string name="app_name">Basics 01</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="main_text_title">Hello World from Android!</string>
    <string name="main_text_subtitle">This is how a layout works</string>
    <string name="main_image_description">A picture of a cat</string>
    <string name="main_button_1">Click Me 1</string>
    <string name="main_button_2">Click Me 2</string>

</resources>
