<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/page_padding"
    tools:context=".MainActivity"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        style="@style/AppTheme.LargeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text_title"/>

    <TextView
        style="@style/AppTheme.SmallTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text_subtitle"
        android:layout_marginTop="@dimen/spacer_top_small"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/cat"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/spacer_top"
        android:contentDescription="@string/main_image_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacer_top"
        android:gravity="bottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_button_1"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_button_2"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
